# LW1

./: CMakeLists.txt  main.cpp
src/gui/: canva.cpp  canva.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/shape/: AbstractShape.h  shapes.h
